feat: add guoqing and lucky

--- a/style/theme/vant.scss
+++ b/style/theme/vant.scss
@@ -11,4 +11,5 @@
   --van-background: rgb(var(--fill-primary)) !important;
   --van-background-2: rgb(var(--fill-default)) !important;
   --van-border-color: rgb(var(--border-primary)) !important;
+  --van-active-color: rgb(var(--fill-primary)) !important;
 }
