--- a/style/global.scss
+++ b/style/global.scss
@@ -10,6 +10,11 @@ body,
   @apply w-full h-full overflow-hidden bg-default text-color font-sans p-0 m-0 text-base;
 }
 
+@font-face {
+  font-family: font-ziti;
+  src: url('~/assets/fonts/ZhiMangXing-Regular.ttf');
+}
+
 *,
 ::before,
 ::after {
