--- a/style/theme/dark.scss
+++ b/style/theme/dark.scss
@@ -1,13 +1,18 @@
 :root.dark-mode {
   --fill-primary: 22, 26, 36;
   --fill-default: 30, 34, 45;
-  --fill-dark: 30, 34, 45;
+  --fill-dark: 255, 255, 255;
   --fill-hover: 22, 26, 36;
   --text-primary: 235, 235, 235;
   --text-auxiliary: 180, 180, 180;
   --text-hint: 120, 120, 120;
-  --text-light: 255, 255, 255;
+  --text-light: 0, 0, 0;
   --border-primary: 45, 45, 45;
-  --border-dark: 60, 60, 60;
+  --border-dark: 235, 235, 235;
   --color-shadow: rgb(255 255 255 / 20%);
+  --fill-wx: 17, 17, 17;
+  --fill-wx-hover: 27, 27, 27;
+  --fill-wx-hint: 50, 50, 50;
+  --text-wx: 51, 51, 51;
+  --text-wx-hint: 85, 85, 85;
 }
