--- a/style/theme/light.scss
+++ b/style/theme/light.scss
@@ -8,6 +8,11 @@
   --text-hint: 200, 200, 200;
   --text-light: 255, 255, 255;
   --border-primary: 235, 235, 235;
-  --border-dark: 77, 77, 77;
+  --border-dark: 45, 45, 45;
   --color-shadow: rgb(51 51 51 / 10%);
+  --fill-wx: 243, 243, 243;
+  --fill-wx-hover: 250, 250, 250;
+  --fill-wx-hint: 220, 220, 220;
+  --text-wx: 51, 51, 51;
+  --text-wx-hint: 165, 165, 165;
 }
